# regalia-backend-refactored

./: README.md  pyproject.toml  requirements.txt
config/: settings.py
