[tool.poetry]
name = "drfx-django5"
version = "0.1.0"
description = ""
authors = ["Damiano Gualandri <dag7@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "^3.8.1"
certifi = "^2024.2.2"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
cryptography = "^42.0.7"
defusedxml = "^0.7.1"
dj-rest-auth = "^6.0.0"
Django = "^5.0.6"
django-allauth = "^0.63.2"
djangorestframework = "^3.15.1"
idna = "^3.7"
oauthlib = "^3.2.2"
pycparser = "^2.22"
PyJWT = "^2.8.0"
python3-openid = "^3.2.0"
pytz = "^2024.1"
requests = "^2.32.2"
requests-oauthlib = "^2.0.0"
six = "^1.16.0"
sqlparse = "^0.5.0"
typing-extensions = "^4.12.0"
urllib3 = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
